--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@floating-ui/dom": "^1.6.10",
     "@napi-rs/simple-git": "0.1.19",
     "@tweenjs/tween.js": "^25.0.0",
+    "@types/three": "^0.168.0",
+    "@vercel/analytics": "^1.3.1",
     "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
     "chokidar": "^3.6.0",
@@ -85,6 +87,7 @@
     "serve-handler": "^6.1.5",
     "shiki": "^1.12.1",
     "source-map-support": "^0.5.21",
+    "three": "^0.168.0",
     "to-vfile": "^8.0.0",
     "toml": "^3.0.0",
     "unified": "^11.0.5",
